--- a/register.html
+++ b/register.html
@@ -25,48 +25,40 @@
     <h3>ข้อมูล Descriptor (คัดลอกทั้งหมดนี้):</h3>
     <textarea id="descriptorOutput"></textarea>
 
-    <script>
-        // ที่อยู่ Repository ของคุณ
-        const GITHUB_REPO_URL = `https://raw.githubusercontent.com/Admin-Anuban/my-checkin-app/main/`;
+<script>
+    const GITHUB_REPO_URL = `https://raw.githubusercontent.com/Admin-Anuban/my-checkin-app/main/`;
 
-        async function generateDescriptor() {
-            const employeeId = document.getElementById('employeeId').value;
-            if (!employeeId) {
-                alert('กรุณาใส่รหัสพนักงาน');
-                return;
-            }
-
-            // แก้ไข YOUR_USERNAME และ YOUR_REPO_NAME เป็นของคุณ
-            if (GITHUB_REPO_URL.includes('YOUR_USERNAME')) {
-                alert('กรุณาแก้ไข YOUR_USERNAME และ YOUR_REPO_NAME ในไฟล์ register.html ก่อน');
-                return;
-            }
-
-            await faceapi.nets.ssdMobilenetv1.loadFromUri('/models');
-            await faceapi.nets.faceLandmark68Net.loadFromUri('/models');
-            await faceapi.nets.faceRecognitionNet.loadFromUri('/models');
-
-            const output = document.getElementById('descriptorOutput');
-            output.value = 'กำลังโหลดรูปและประมวลผล...';
-
-            // เราต้องเพิ่ม ?timestamp เพื่อป้องกัน browser cache รูปเก่า
-            const imageUrl = `<span class="math-inline">\{GITHUB\_REPO\_URL\}employee\_images/</span>{employeeId}.jpg?t=${new Date().getTime()}`;
-
-            try {
-                const img = await faceapi.fetchImage(imageUrl);
-                const detection = await faceapi.detectSingleFace(img).withFaceLandmarks().withFaceDescriptor();
-
-                if (detection) {
-                    const descriptorArray = Array.from(detection.descriptor);
-                    output.value = JSON.stringify(descriptorArray);
-                } else {
-                    output.value = 'ไม่พบใบหน้าในรูปภาพ โปรดใช้รูปที่เห็นหน้าตรงและชัดเจน';
-                }
-            } catch (e) {
-                 output.value = 'ไม่สามารถโหลดรูปภาพได้! ตรวจสอบว่าชื่อไฟล์ถูกต้องและอัปโหลดไปยัง GitHub แล้วหรือยัง';
-                 console.error(e);
-            }
+    async function generateDescriptor() {
+        const employeeId = document.getElementById('employeeId').value;
+        if (!employeeId) {
+            alert('กรุณาใส่รหัสพนักงาน');
+            return;
         }
-    </script>
+
+        await faceapi.nets.ssdMobilenetv1.loadFromUri('/models');
+        await faceapi.nets.faceLandmark68Net.loadFromUri('/models');
+        await faceapi.nets.faceRecognitionNet.loadFromUri('/models');
+
+        const output = document.getElementById('descriptorOutput');
+        output.value = 'กำลังโหลดรูปและประมวลผล...';
+
+        const imageUrl = `${GITHUB_REPO_URL}employee_images/${employeeId}.jpg?t=${new Date().getTime()}`;
+
+        try {
+            const img = await faceapi.fetchImage(imageUrl);
+            const detection = await faceapi.detectSingleFace(img).withFaceLandmarks().withFaceDescriptor();
+
+            if (detection) {
+                const descriptorArray = Array.from(detection.descriptor);
+                output.value = JSON.stringify(descriptorArray);
+            } else {
+                output.value = 'ไม่พบใบหน้าในรูปภาพ โปรดใช้รูปที่เห็นหน้าตรงและชัดเจน';
+            }
+        } catch (e) {
+            output.value = 'ไม่สามารถโหลดรูปภาพได้! ตรวจสอบว่าชื่อไฟล์ถูกต้องและอัปโหลดไปยัง GitHub แล้วหรือยัง';
+            console.error(e);
+        }
+    }
+</script>
 </body>
 </html>
